assets/css/basestyle.css
body {
    margin: 0;
    font-family: 'Puritan20Normal', Arial, sans-serif;
    font-size: 16px;
    line-height: 18px;

    background-image: url("../bg.png");
    overflow-y: scroll;
}
b {
    font-family: 'Puritan20Normal', Arial, sans-serif;
    font-weight: normal;
    font-style: normal;
    color: #df35a0;
}
i {
    font-family: 'Puritan20Italic', Arial, sans-serif;
    font-weight: normal;
    font-style: normal;
    color: #000000;
}
strong {
    font-family: 'Puritan20BoldItalic', Arial, sans-serif;
    font-weight: normal;
    font-style: normal;
    font-size: 16px;
    color: #333333;
}




.container {
    width: 940px;
    margin-left: auto;
    margin-right: auto;
    margin-top: 10px;
    border-radius: 20px;
    background-color: #fff;
}
.title-area {
    border-top-left-radius: 20px;
    border-top-right-radius: 20px;
    background-color: #fafafa;
}
.title {
    width: 900px;
    height: 90px;
    margin-left: auto;
    margin-right: auto;
}
.title-image {
    height: 120px;
    margin-top: 10px;
    margin-left: -12px;
    display: inline-block;
}
.title-right {
    margin-left: 10px;
}
.title-right tr {
}
.menu-space td {
    height: 26px;
}
.title-font-div {
    display: inline-block;
    margin-left: 23px;
    vertical-align: 300%;
}
.title-font {
    font-size: 32px;
    font-weight: bold;
}
.title-font-sm {
    font-size: 14px;
    color: #888;
    margin-left: 5px;
}
.github {
    width: 70px;
    display: inline-block;
    margin-left: 200px;
}

dt {
    margin-top: 10px;
}

.home-font {
    font-size: 28px;
    line-height: 28px;
    color: #484848;
}
.samples-font {
    font-size: 20px;
    line-height: 20px;
    color: #484848;
}
.samples-bold-font {
    font-size: 20px;
    line-height: 20px;
}
.code-doc {
    color: #c50f70;
}


.nav-bar {
    width: 940px;
    height: 26px;

    border-style: solid;
    border-width: 0;
    border-bottom-width: 2px;
    border-color: #c0dff8;

    text-align: center;
}
.nav-left {
    width: 52px;
    display: inline-block;
}
.nav-divider {
    height: 100px;
}
.nav-bar .nav-item {
    width: auto;
    margin-right: 20px;
    margin-left: 20px;
    height: 20px;
    display: inline-block;
}
.nav-bar .nav-item a {
    text-decoration: none;
    font-size: 28px;
}
.nav-bar .nav-item a:link {
    color: #636363;
}
.nav-bar .nav-item a:visited {
    color: #636363;
}
.nav-bar .nav-item a:hover {
    color: #0f70c5;
}
.nav-bar .nav-item .nav-disabled {
    color: #0f70c5;
}





.section-content {
    width : 96%;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 20px;
}
.section-content hr {
    height : 1px;
    width : 80%;
    color: #cccccc;
    background-color: #cccccc;
    border-width: 0;
}




.prettyprint .override {
    border: 0;
    background-color: #cecece;
}
.largecodestyle {
    text-align: left;
    font-family: "Consolas", "Droid Sans Mono", "DejaVu Sans Mono", Monospace;
    font-size: 13px;
    line-height: 15px;
}
.codestyle {
    text-align: left;
    font-family: "Consolas", "Droid Sans Mono", "DejaVu Sans Mono", Monospace;
    font-size: 11px;
    line-height: 13px;
}
.doclink {
    text-decoration : underline;
    color: #0f50df;
}
.doclink:hover {
    text-decoration : underline;
    color: #af50df;
}




/*  - - - - - - - - - - - - - - - - - - - - - - - - - */




.about-feature {
    height: 22px;
    background-repeat: no-repeat;
    background-image: url("../thumbsup.png");
    padding-left: 20px;
}
.about-logo {
    height: 80px;
    margin-left: 30px;
    margin-right: 30px;
    display: inline-block;
}

.feature-list li {
    margin: 5px;
}

.feature-list .li1 {
    font-size: 14px;
}
.feature-list .li2 {
    font-size: 17px;
}
.feature-list .li3 {
    font-size: 20px;
}


/*  - - - - - - - - - - - - - - - - - - - - - - - - - */


.feature-image {
    display: inline-block;
    width: 280px;
    margin-left: 9px;
    margin-right: 9px;
}

.feature-image-table {
    display: inline-block;
    width: 280px;
    height: 240px;
}

.feature-image-table tr {
    height : 100%;
}


.feature-segment {
    width: auto;
    background-color: #efefef;
    border-radius: 20px;
    border-color: #dadada;
    border-width: 1px;
    border-style: solid;
    padding: 10px;
}



/*  - - - - - - - - - - - - - - - - - - - - - - - - - */



.sample-content {
    width : 96%;
    margin-left: auto;
    margin-right: auto;
    font-size: 18px;
    color: #555;
}

.sample-overlay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: #000000;
    z-index:10000;
    display:none;
}
.sample-panel {
    position: fixed;
    width: 860px;
    height: 660px;
    margin-left: auto;
    margin-right: auto;
    display: block;
    background-color: #454545;
    z-index:100001;
    display:none;
    border-radius: 10px;
    color: #ffffff;
}
.sample-panel .sample-panel-inner {
    position: relative;
    width: 850px;
    height: 650px;
    margin-left: auto;
    margin-right: auto;
    top: 5px;
}
.sample-panel-inner .sample-panel-title {
    margin-left: auto;
    margin-right: auto;
    margin-top: 5px;
    width: 800px;
    height: 22px;
}
.sample-panel-inner .sample-panel-title b {
    color: #ffffff;
    font-size: 25px;
}
.sample-panel-title .sample-title-block {
    float: right;
}
.sample-title-block a {
    text-decoration: none;
    font-size: 20px;
    margin-left: 5px;
}
.sample-title-block .tab-enabled:link {
    color: #a3a3a3;
}
.sample-title-block .tab-enabled:visited {
    color: #a3a3a3;
}
.sample-title-block .tab-enabled:hover {
    color: #2f90e5;
}
.sample-title-block .tab-disabled {
    color: #2f90e5;
}
.sample-panel-inner .sample-panel-content {
    position: relative;
    width: 800px;
    height: 600px;
    margin-left: auto;
    margin-right: auto;
    background-color: #333333;
}
.sample-panel-content embed {
    background-color: #333333;
}
.sample-panel-content div {
    overflow: auto;
}
.sample-panel-inner .sample-panel-footer {
    position: relative;
    width: 800px;
    height: 15px;
    top: 5px;
    font-size: 15px;
    line-height: 15px;
    margin-left: auto;
    margin-right: auto;
}
.sample-panel-footer .sample-panel-info {
    float: left;
    font-size: 12px;
}
.sample-panel-footer .sample-panel-info b {
    color: #ffffff;
    margin-right: 5px;
}
.sample-panel-footer .sample-panel-info i {
    color: #ffffff;
    margin-right: 10px;
}
.sample-panel-footer .sample-close {
    float: right;
}
.sample-panel-footer .sample-close a {
    text-decoration: underline;
    color: #ffffff;
}
.sample-code {
    height : 600px;
}


.sample-link {
    height: 20px;
    width: 34px;
    display: inline-block;
    background-repeat: no-repeat;
    background-image: url("../play.png");
    float: right;
}

.sample-header {
    height: 22px;
    background-repeat: no-repeat;
    background-image: url("../sample.png");
    padding-left: 22px;
}

.sample-table {
    width: 100%;
}
.sample-desc {
    width: 138px;
    vertical-align: middle;
}
.sample-image {
    width: 128px;
    vertical-align: middle;
}
.sample-spacer {
    width: 35px;
}


/*  - - - - - - - - - - - - - - - - - - - - - - - - - */



.downloads-table {
    width: 100%;
}
.downloads-segment {
    width: 49.5%;
    vertical-align: top;
    background-color: #efefef;
    border-radius: 20px;
    border-color: #dadada;
    border-width: 1px;
    border-style: solid;
    padding: 10px;
}
.downloads-spacer {
    width: auto;
}

.as3-table {
    width: 100%;
}
.as3-segment {
    width: 33.3%;
    vertical-align: top;
}

/*  - - - - - - - - - - - - - - - - - - - - - - - - - */


.doc-header {
    height: 22px;
    background-repeat: no-repeat;
    background-image: url("../doc.png");
    padding-left: 22px;
}

.doc-table {
    width: 100%;
}
.doc-left {
    width: 79%;
    vertical-align: middle;
    padding-left : 20px;
}
.doc-spacer {
    width: 1%;
}
.doc-right {
    width: 20%;
    vertical-align: middle;
}



/*  - - - - - - - - - - - - - - - - - - - - - - - - - */

.donate {
    margin-left: 20px;
}

.contrib1 {
    width: auto;
    margin-right: 20px;
    display: inline-block;
    font-size: 17px;
}
.contrib2 {
    width: auto;
    margin-right: 20px;
    display: inline-block;
    font-size: 17px;
/*    color: #0f70c5;*/
    color: #df35a0;
}

.graphs {
    width: 660px;
    height: 230px;
    margin-left: auto;
    margin-right: auto;
}

.graphs img {
    width: 660px;
    height: 230px;
}



footer {
    text-align: center
}

